# Task_Manager

./: README.md  docker-compose.yml
.github/workflows/: main.yml
Monitoring/grafana/: datasource.yml
Monitoring/prometheus/: prometheus.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  TaskManager.css  TaskManager.jsx  index.css
client/src/api/: Data.js  tasks.js
client/src/components/: Board.jsx  CardItem.jsx  Column.jsx  Task.jsx
server/: .env  Dockerfile  db.sqlite3  manage.py  pyproject.toml
server/projects/: models.py  serializers.py  urls.py  views.py
server/server_config/: settings.py
server/tasks/: models.py  serializers.py  urls.py  views.py
server/users/: models.py  serializers.py  urls.py  views.py
